js/js.translator/testData/incremental/invalidation/exportsThroughInlineFunctionWithCrossModuleInliner/lib1/l1.5.kt
fun foo(): String {
    if (false) lib1Foo()
    return "hello 5"
}

inline fun fooInline() = "hello inline 3"
